--- a/Lab2.csproj
+++ b/Lab2.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
@@ -10,6 +10,12 @@
   <ItemGroup>
     <PackageReference Include="CSharp.Choices" Version="2.1.1" />
     <PackageReference Include="LanguageExt.Core" Version="4.4.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.0"/>
   </ItemGroup>
+
+<ItemGroup>
+    <ProjectReference Include="..\PSSC\cod\Data\Context.csproj" />
+</ItemGroup>
 
 </Project>
